# vertagus

./: .gitignore  BRANCH_BASED_VERSION_CHECKING.md  CHANGELOG.md  README.md  justfile  mkdocs.yml  pyproject.toml  test_branch_feature.py  versions.json  vertagus-branch-example.yaml  vertagus.toml  vertagus.yaml
.github/: pull_request_template.md
.github/workflows/: auto-on-pr-merge.docs.yaml  docs.yml  manual-trigger.docs.yaml  reusable.check-version.yml  reusable.docs.yml  reusable.run-tests.yml  reusable.tag-commit.yml  workflow.on-pr-merge.yml  workflow.on-pr.yml
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/cli-reference/: index.html
0.3.1/configuration/: index.html
0.3.1/contributing/: index.html
0.3.1/examples/: index.html
0.3.1/getting-started/: index.html
0.3.1/mike-setup/: index.html
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0.dev0/: 404.html  index.html  sitemap.xml
0.4.0.dev0/cli-reference/: index.html
0.4.0.dev0/configuration/: index.html
0.4.0.dev0/contributing/: index.html
0.4.0.dev0/getting-started/: index.html
0.4.0.dev0/search/: search_index.json
0.4.0.dev1/: 404.html  index.html  sitemap.xml
0.4.0.dev1/cli-reference/: index.html
0.4.0.dev1/configuration/: index.html
0.4.0.dev1/contributing/: index.html
0.4.0.dev1/getting-started/: index.html
0.4.0/cli-reference/: index.html
0.4.0/configuration/: index.html
0.4.0/contributing/: index.html
0.4.0/examples/: index.html
0.4.0/getting-started/: index.html
0.4.0/mike-setup/: index.html
0.4/cli-reference/: index.html
0.4/configuration/: index.html
0.4/contributing/: index.html
0.4/getting-started/: index.html
0.4/search/: search_index.json
dev/: 404.html  index.html  sitemap.xml
dev/cli-reference/: index.html
dev/configuration/: index.html
dev/contributing/: index.html
dev/examples/: index.html
dev/getting-started/: index.html
dev/mike-setup/: index.html
docs/: README.md  cli-reference.md  components.md  configuration.md  contributing.md  examples.md  getting-started.md  index.md  mike-setup.md
scripts/: mike-docs.sh
test/: .coveragerc  test.sh  test_factory.py
(+79 files in other folders)
