# setuptools pyproject.toml for a project called "vertagus" that is a
# Python package

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vertagus"
version = "0.1.0dev0"
description = "A tool to assist the maintenance of package versioning with scm tags"
authors = [
    {"name" = "John Raines", "email" = "johndanielraines@gmail.com"}
]
dependencies = [
    "click",
    "GitPython",
    "tomli",
    "packaging"
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
qa = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
vertagus = "vertagus.cli:cli"
